--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,51 @@
+/* Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap');
+
+:root{
+    --main-color: rgb(0, 255, 255);
+    --text-color: #fff;
+    --bg-color-01: #1f242d;
+    --bg-color-02: #323946;
+    --color-00: #0000001a;
+
+    /* Cores Extras */
+
+    --color-01: #999;
+    --color-02: #009539;
+    --color-03: #7950f2;
+    --color-04: #c00000;
+    --color-05: #232323; 
+    
+}
+
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box; 
+    text-decoration: none; /* Retirar sublinhado */
+    border: none; 
+    outline: none; /* borda ao selecionar um botão ou input */
+    scroll-behavior: smooth; /* suavização ao interagir na página */
+}
+html{
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+}
+body{
+    background-color: var(--bg-color-01);
+    color: var(--text-color);
+}
+header{
+    /* Ao fazer isso o navbar sempre aparecerá no topo da página */
+    position: fixed; /* fixar no topo */
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 1.1rem; /* aumenta herdando da tag pai - 110% */
+    background-color: var(--bg-color-01);
+    display: flex; /* comportamento dos elementos */
+    justify-content: space-between;
+    align-items: center; /* alinha no centro na vertical */
+    z-index: 100;
+    border: solid 1px var(--color-02);
 }
